# code-minimap

./: .gitattributes  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  Cargo.toml  FUNDING.yml  LICENSE-MIT  README.md  build.rs  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: CICD.yml
completions/bash/: code-minimap.bash
completions/elvish/: code-minimap.elv
completions/fish/: code-minimap.fish
completions/powershell/: _code-minimap.ps1
completions/zsh/: _code-minimap
examples/: simple.rs  write_to_string.rs
src/: cli.rs  core.rs  lib.rs  lossy_reader.rs  main.rs  util.rs
