[package]
name = "code-minimap"
version = "0.6.2"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
description="A high performance code minimap generator"
categories = ["command-line-utilities"]
homepage = "https://github.com/wfxr/code-minimap"
keywords = [
    "minimap",
    "tool",
]
license = "MIT/Apache-2.0"
exclude = ["/completions"]
repository = "https://github.com/wfxr/code-minimap"
edition = "2021"
build = "build.rs"

[features]
default = ["application"]
# Feature required for build the `code-minimap` application. Should be disabled when
# depending on `code-minimap` as a library.
application = ["structopt"]

[lib]
name = "code_minimap"
path = "src/lib.rs"

[[bin]]
name = "code-minimap"
path = "src/bin/code-minimap/main.rs"

[dependencies]
anyhow = "^1.0.52"
itertools = "^0.10.3"
structopt = { version = "^0.3.25", features = ["wrap_help"], optional = true }

[build-dependencies]
structopt = "^0.3.25"

[dev-dependencies]
rstest = "^0.12.0"

[profile.release]
lto = true
codegen-units = 1
