[package]
name = "code-minimap"
version = "0.6.7"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
description = "A high performance code minimap generator"
categories = ["command-line-utilities"]
homepage = "https://github.com/wfxr/code-minimap"
keywords = ["minimap", "tool"]
license = "Apache-2.0 OR MIT"
exclude = ["/completions"]
repository = "https://github.com/wfxr/code-minimap"
edition = "2021"
build = "build.rs"

[features]
default = ["application"]
# Feature required for build the `code-minimap` application. Should be disabled when
# depending on `code-minimap` as a library.
application = ["clap", "clap_complete"]

[lib]
name = "code_minimap"
path = "src/lib.rs"

[[bin]]
name = "code-minimap"
path = "src/bin/code-minimap/main.rs"

[dependencies]
anyhow = "1"
itertools = "0"

clap = { version = "4", features = ["wrap_help", "derive"], optional = true }
clap_complete = { version = "4", optional = true }
atty = "0.2.14"

[build-dependencies]
clap = { version = "4", features = ["wrap_help", "derive"], optional = true }
clap_complete = { version = "4", optional = true }

[dev-dependencies]
rstest = "0"

[profile.release]
lto = true
codegen-units = 1
